--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
           <img>
         </div>
       </template>
-      <button class="load-more-button" id="gallery-button">Load more</button>
+      <button class="load-more-button ready" id="gallery-button">Load more</button>
     </section>
   </main>
   <footer>
