--- a/index.html
+++ b/index.html
@@ -160,46 +160,60 @@
             </a>
           </li>
           <li class="news-item">
-            <div class="news-date"><span class="date">12</span><span class="month">Feb</span></div>
-            <img src="img/news/news-2.png" width="263" height="208" alt="fire">
-            <h2 class="news-preview-title">Amazing Blog Post</h2>
-            <p class="preview-description"><span class="news-author">By admin</span><span class="comments-num">2 comment</span></p>
+            <a href="#void" class="news-link">
+              <p class="news-date"><span class="date">12</span><span class="month">Feb</span></p>
+              <img src="img/news/news-2.png" width="263" height="208" alt="fire">
+              <h2 class="news-preview-title">Amazing Blog Post</h2>
+              <p class="preview-description"><span class="news-author">By admin</span><span class="comments-num">2 comment</span></p>
+            </a>
           </li>
           <li class="news-item">
-            <div class="news-date"><span class="date">12</span><span class="month">Feb</span></div>
-            <img src="img/news/news-3.png" width="263" height="208" alt="road cycling">
-            <h2 class="news-preview-title">Amazing Blog Post</h2>
-            <p class="preview-description"><span class="news-author">By admin</span><span class="comments-num">2 comment</span></p>
+            <a href="#void" class="news-link">
+              <p class="news-date"><span class="date">12</span><span class="month">Feb</span></p>
+              <img src="img/news/news-3.png" width="263" height="208" alt="road cycling">
+              <h2 class="news-preview-title">Amazing Blog Post</h2>
+              <p class="preview-description"><span class="news-author">By admin</span><span class="comments-num">2 comment</span></p>
+            </a>
           </li>
           <li class="news-item">
-            <div class="news-date"><span class="date">12</span><span class="month">Feb</span></div>
-            <img src="img/news/news-4.png" width="263" height="208" alt="working">
-            <h2 class="news-preview-title">Amazing Blog Post</h2>
-            <p class="preview-description"><span class="news-author">By admin</span><span class="comments-num">2 comment</span></p>
+            <a href="#void" class="news-link">
+              <p class="news-date"><span class="date">12</span><span class="month">Feb</span></p>
+              <img src="img/news/news-4.png" width="263" height="208" alt="working">
+              <h2 class="news-preview-title">Amazing Blog Post</h2>
+              <p class="preview-description"><span class="news-author">By admin</span><span class="comments-num">2 comment</span></p>
+            </a>
           </li>
           <li class="news-item">
-            <div class="news-date"><span class="date">12</span><span class="month">Feb</span></div>
-            <img src="img/news/news-4.png" width="263" height="208" alt="sea">
-            <h2 class="news-preview-title">Amazing Blog Post</h2>
-            <p class="preview-description"><span class="news-author">By admin</span><span class="comments-num">2 comment</span></p>
+            <a href="#void" class="news-link">
+              <p class="news-date"><span class="date">12</span><span class="month">Feb</span></p>
+              <img src="img/news/news-4.png" width="263" height="208" alt="sea">
+              <h2 class="news-preview-title">Amazing Blog Post</h2>
+              <p class="preview-description"><span class="news-author">By admin</span><span class="comments-num">2 comment</span></p>
+            </a>
           </li>
           <li class="news-item">
-            <div class="news-date"><span class="date">12</span><span class="month">Feb</span></div>
-            <img src="img/news/news-6.png" width="263" height="208" alt="forest cycling">
-            <h2 class="news-preview-title">Amazing Blog Post</h2>
-            <p class="preview-description"><span class="news-author">By admin</span><span class="comments-num">2 comment</span></p>
+            <a href="#void" class="news-link">
+              <p class="news-date"><span class="date">12</span><span class="month">Feb</span></p>
+              <img src="img/news/news-6.png" width="263" height="208" alt="forest cycling">
+              <h2 class="news-preview-title">Amazing Blog Post</h2>
+              <p class="preview-description"><span class="news-author">By admin</span><span class="comments-num">2 comment</span></p>
+            </a>
           </li>
           <li class="news-item">
-            <div class="news-date"><span class="date">12</span><span class="month">Feb</span></div>
-            <img src="img/news/news-7.png" width="263" height="208" alt="waterfall">
-            <h2 class="news-preview-title">Amazing Blog Post</h2>
-            <p class="preview-description"><span class="news-author">By admin</span><span class="comments-num">2 comment</span></p>
+            <a href="#void" class="news-link">
+              <p class="news-date"><span class="date">12</span><span class="month">Feb</span></p>
+              <img src="img/news/news-7.png" width="263" height="208" alt="waterfall">
+              <h2 class="news-preview-title">Amazing Blog Post</h2>
+              <p class="preview-description"><span class="news-author">By admin</span><span class="comments-num">2 comment</span></p>
+            </a>
           </li>
           <li class="news-item">
-            <div class="news-date"><span class="date">12</span><span class="month">Feb</span></div>
-            <img src="img/news/news-8.png" width="263" height="208" alt="p">
-            <h2 class="news-preview-title">Amazing Blog Post</h2>
-            <p class="preview-description"><span class="news-author">By admin</span><span class="comments-num">2 comment</span></p>
+            <a href="#void" class="news-link">
+              <p class="news-date"><span class="date">12</span><span class="month">Feb</span></p>
+              <img src="img/news/news-8.png" width="263" height="208" alt="p">
+              <h2 class="news-preview-title">Amazing Blog Post</h2>
+              <p class="preview-description"><span class="news-author">By admin</span><span class="comments-num">2 comment</span></p>
+            </a>
           </li>
         </ul>
       </div>
