Step 1. Ham. HTML fixed

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 <body>
   <header class="header">
     <div class="container">
-      <div class="logo">
+      <a class="logo">
         <span class="logo-h">h</span>the<span class="logo-ham">ham</span>
-      </div>
+      </a>
       <nav class="main-menu">
         <ul class="main-menu-list">
           <li class="main-menu-item"><a href="#">home</a></li>
@@ -422,7 +422,7 @@
   </main>
   <footer>
     <div class="container">
-      <span class="footer-text">&copy; Copyright 2015 <span class="greet-text">theHam</span> | All Rights Reserved</span>
+      <span class="footer-text">&copy; Copyright 2015 <a class="greet-text">theHam</a> | All Rights Reserved</span>
     </div>
   </footer>
   <svg
